# gnuplot_practice

./: README.md
3d_plot/: plot_ex1.gp
my_try/: CMakeLists.txt  plot_ex1.gp  plot_ex2.gp  plot_ex3.gp  plot_ex4.gp
my_try/gen_data/: generate.cpp
polar/: plot.gp
tutorial/: sample1.gp  sample2.gp
